--- a/css/components/overlay.css
+++ b/css/components/overlay.css
@@ -11,10 +11,12 @@
 
 #canvas-preview {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
     pointer-events: auto;
 }
 
