--- a/css/components/ui.css
+++ b/css/components/ui.css
@@ -14,6 +14,8 @@
     overflow: hidden;
     /* NO SCROLLBARS allowed */
     min-width: 0;
+    height: 240px;
+    /* Fixed height to match code-area */
 }
 
 @media (max-width: 1400px) {
